--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,8 +7,8 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
-            SITE_NAME: "FODI",
+            SCF_GATEWAY: "https://1drive.kurangkasih.workers.dev/",
+            SITE_NAME: "1drive Index FODI",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
