--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,7 +8,7 @@
         */
         window.GLOBAL_CONFIG = {
             SCF_GATEWAY: "https://1drive.kurangkasih.workers.dev/",
-            SITE_NAME: "1drive Index FODI",
+            SITE_NAME: "1drive Index ",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
@@ -858,8 +858,8 @@
                         createDplayer: (video, type, elem) => {
                             const host = '//s0.pstatp.com/cdn/expire-1-M';
                             const resources = [
-                                '/dplayer/1.25.0/DPlayer.min.css',
-                                '/dplayer/1.25.0/DPlayer.min.js',
+                                '/dplayer/1.26.0/DPlayer.min.css',
+                                '/dplayer/1.26.0/DPlayer.min.js',
                                 '/hls.js/0.12.4/hls.light.min.js',
                                 '/flv.js/1.5.0/flv.min.js'
                             ];
