--- a/front-end/index.html
+++ b/front-end/index.html
@@ -857,11 +857,11 @@
 
                         createDplayer: (video, type, elem) => {
                             const host = '//cdn.jsdelivr.net/npm';
-							const resources = [
-								'/dplayer/dist/DPlayer.min.css',
-								'/hls.js/dist/hls.min.js',
-								'dplayer/dist/DPlayer.min.js'
-							];
+				const resources = [
+					'/dplayer/dist/DPlayer.min.css',
+					'/hls.js/dist/hls.min.js',
+					'dplayer/dist/DPlayer.min.js'
+			];
                             const host = '//s0.pstatp.com/cdn/expire-1-M';
                             const resources = [
                                 '/flv.js/1.5.0/flv.min.js'
@@ -1320,7 +1320,7 @@
                 <div class="preview">
                     <div class="info">
                         <div class="file-name"></div>
-                        <div class="btn download">下载</div>
+                        <div class="btn download">Download</div>
                         <div class="btn quote">引用</div>
                         <div class="btn share">分享</div>
                     </div>
