--- a/front-end/index.html
+++ b/front-end/index.html
@@ -856,11 +856,15 @@
                         },
 
                         createDplayer: (video, type, elem) => {
+                            const host = '//cdn.jsdelivr.net/npm';
+                            const resources = [
+                                '/dplayer/dist/DPlayer.min.css',
+                                '/dplayer/dist/DPlayer.min.js',
+                                '/hls.js/dist/hls.min.js',
+                            ];
                             const host = '//s0.pstatp.com/cdn/expire-1-M';
                             const resources = [
-                                '/dplayer/1.26.0/DPlayer.min.css',
-                                '/dplayer/1.26.0/DPlayer.min.js',
-                                '/hls.js/0.12.4/hls.light.min.js',
+                               
                                 '/flv.js/1.5.0/flv.min.js'
                             ];
                             let unloadedResourceCount = resources.length;
